parser.output
Grammaire

    0 $accept: file $end

    1 file: declarations_globales body
    2     | body

    3 declarations_globales: declaration ';' declarations_globales
    4                      | declaration ';'

    5 declaration: LET names '=' functions
    6            | LET REC names '=' functions

    7 names: NAME names
    8      | NAME

    9 functions: FUN names "=>" functions
   10          | expr

   11 declaration_locale: LET NAME '=' factor_expr IN expr
   12                   | LET REC NAME '=' factor_expr IN expr
   13                   | factor_expr WHERE NAME '=' expr
   14                   | factor_expr WHERE REC NAME '=' expr

   15 expr: conditional_expr
   16     | declaration_locale
   17     | match_expr
   18     | EMIT '"' MOT '"' tree
   19     | NAME

   20 conditional_expr: IF logical_expr THEN expr ELSE expr
   21                 | logical_expr

   22 logical_expr: logical_expr "||" relational_expr
   23             | logical_expr "&&" relational_expr
   24             | relational_expr

   25 relational_expr: relational_expr "<" additive_expr
   26                | relational_expr ">" additive_expr
   27                | relational_expr ">=" additive_expr
   28                | relational_expr "<=" additive_expr
   29                | relational_expr "==" additive_expr
   30                | relational_expr "!=" additive_expr
   31                | additive_expr

   32 additive_expr: additive_expr '+' multiplicative_expr
   33              | additive_expr '-' multiplicative_expr
   34              | multiplicative_expr

   35 multiplicative_expr: multiplicative_expr '*' negative_expr
   36                    | multiplicative_expr '/' negative_expr
   37                    | negative_expr

   38 negative_expr: factor_expr
   39              | '!' factor_expr

   40 factor_expr: '(' expr ')'
   41            | '"' text '"'
   42            | tree
   43            | INTEGER

   44 match_expr: MATCH expr WITH filter_expr END

   45 filter_expr: '|' pforests "=>" expr filter_expr
   46            | '|' pforests "=>" expr

   47 pforests: pattern_expr pforests
   48         | pattern_expr

   49 pattern_expr: '_'
   50             | TAG '{' pattern_expr '}'
   51             | TAG '{' '}'
   52             | '_' '{' pattern_expr '}'
   53             | '_' '{' '}'
   54             | '*' '_' '*'
   55             | '/' '_' '/'
   56             | '-' '_' '-'
   57             | NAME
   58             | '*' NAME '*'
   59             | '/' NAME '/'
   60             | '-' NAME '-'

   61 body: tree body
   62     | tree

   63 tree: TAG '[' attributs ']' '{' contenus '}'
   64     | TAG '[' attributs ']' '/'
   65     | TAG '{' contenus '}'
   66     | TAG '/'
   67     | '{' contenus '}'

   68 attributs: TAG '=' '"' text '"' attributs
   69          | TAG '=' '"' text '"'

   70 contenus: contenu contenus
   71         | contenu
   72         | expr

   73 contenu: expr ','

   74 text: word_t text
   75     | word_t

   76 word_t: MOT ' '
   77       | MOT


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
' ' (32) 76
'!' (33) 39
'"' (34) 18 41 68 69
'(' (40) 40
')' (41) 40
'*' (42) 35 54 58
'+' (43) 32
',' (44) 73
'-' (45) 33 56 60
'/' (47) 36 55 59 64 66
';' (59) 3 4
'=' (61) 5 6 11 12 13 14 68 69
'[' (91) 63 64
']' (93) 63 64
'_' (95) 49 52 53 54 55 56
'{' (123) 50 51 52 53 63 65 67
'|' (124) 45 46
'}' (125) 50 51 52 53 63 65 67
error (256)
TAG (258) 50 51 63 64 65 66 68 69
NAME (259) 7 8 11 12 13 14 19 57 58 59 60
MOT (260) 18 76 77
INTEGER (261) 43
LET (262) 5 6 11 12
REC (263) 6 12 14
FUN (264) 9
IN (265) 11 12
WHERE (266) 13 14
IF (267) 20
THEN (268) 20
ELSE (269) 20
MATCH (270) 44
WITH (271) 44
END (272) 44
EMIT (273) 18
"=>" (274) 9 45 46
"||" (275) 22
"&&" (276) 23
"<" (277) 25
">" (278) 26
"<=" (279) 28
">=" (280) 27
"==" (281) 29
"!=" (282) 30


Non-terminaux, suivis des règles où ils apparaissent

$accept (46)
    à gauche: 0
file (47)
    à gauche: 1 2, à droite: 0
declarations_globales (48)
    à gauche: 3 4, à droite: 1 3
declaration (49)
    à gauche: 5 6, à droite: 3 4
names (50)
    à gauche: 7 8, à droite: 5 6 7 9
functions (51)
    à gauche: 9 10, à droite: 5 6 9
declaration_locale (52)
    à gauche: 11 12 13 14, à droite: 16
expr (53)
    à gauche: 15 16 17 18 19, à droite: 10 11 12 13 14 20 40 44 45
    46 72 73
conditional_expr (54)
    à gauche: 20 21, à droite: 15
logical_expr (55)
    à gauche: 22 23 24, à droite: 20 21 22 23
relational_expr (56)
    à gauche: 25 26 27 28 29 30 31, à droite: 22 23 24 25 26 27 28
    29 30
additive_expr (57)
    à gauche: 32 33 34, à droite: 25 26 27 28 29 30 31 32 33
multiplicative_expr (58)
    à gauche: 35 36 37, à droite: 32 33 34 35 36
negative_expr (59)
    à gauche: 38 39, à droite: 35 36 37
factor_expr (60)
    à gauche: 40 41 42 43, à droite: 11 12 13 14 38 39
match_expr (61)
    à gauche: 44, à droite: 17
filter_expr (62)
    à gauche: 45 46, à droite: 44 45
pforests (63)
    à gauche: 47 48, à droite: 45 46 47
pattern_expr (64)
    à gauche: 49 50 51 52 53 54 55 56 57 58 59 60, à droite: 47 48
    50 52
body (65)
    à gauche: 61 62, à droite: 1 2 61
tree (66)
    à gauche: 63 64 65 66 67, à droite: 18 42 61 62
attributs (67)
    à gauche: 68 69, à droite: 63 64 68
contenus (68)
    à gauche: 70 71 72, à droite: 63 65 67 70
contenu (69)
    à gauche: 73, à droite: 70 71
text (70)
    à gauche: 74 75, à droite: 41 68 69 74
word_t (71)
    à gauche: 76 77, à droite: 74 75


État 0

    0 $accept: . file $end

    TAG  décalage et aller à l'état 1
    LET  décalage et aller à l'état 2
    '{'  décalage et aller à l'état 3

    file                   aller à l'état 4
    declarations_globales  aller à l'état 5
    declaration            aller à l'état 6
    body                   aller à l'état 7
    tree                   aller à l'état 8


État 1

   63 tree: TAG . '[' attributs ']' '{' contenus '}'
   64     | TAG . '[' attributs ']' '/'
   65     | TAG . '{' contenus '}'
   66     | TAG . '/'

    '/'  décalage et aller à l'état 9
    '{'  décalage et aller à l'état 10
    '['  décalage et aller à l'état 11


État 2

    5 declaration: LET . names '=' functions
    6            | LET . REC names '=' functions

    NAME  décalage et aller à l'état 12
    REC   décalage et aller à l'état 13

    names  aller à l'état 14


État 3

   67 tree: '{' . contenus '}'

    TAG      décalage et aller à l'état 1
    NAME     décalage et aller à l'état 15
    INTEGER  décalage et aller à l'état 16
    LET      décalage et aller à l'état 17
    IF       décalage et aller à l'état 18
    MATCH    décalage et aller à l'état 19
    EMIT     décalage et aller à l'état 20
    '"'      décalage et aller à l'état 21
    '!'      décalage et aller à l'état 22
    '('      décalage et aller à l'état 23
    '{'      décalage et aller à l'état 3

    declaration_locale   aller à l'état 24
    expr                 aller à l'état 25
    conditional_expr     aller à l'état 26
    logical_expr         aller à l'état 27
    relational_expr      aller à l'état 28
    additive_expr        aller à l'état 29
    multiplicative_expr  aller à l'état 30
    negative_expr        aller à l'état 31
    factor_expr          aller à l'état 32
    match_expr           aller à l'état 33
    tree                 aller à l'état 34
    contenus             aller à l'état 35
    contenu              aller à l'état 36


État 4

    0 $accept: file . $end

    $end  décalage et aller à l'état 37


État 5

    1 file: declarations_globales . body

    TAG  décalage et aller à l'état 1
    '{'  décalage et aller à l'état 3

    body  aller à l'état 38
    tree  aller à l'état 8


État 6

    3 declarations_globales: declaration . ';' declarations_globales
    4                      | declaration . ';'

    ';'  décalage et aller à l'état 39


État 7

    2 file: body .

    $défaut  réduction par utilisation de la règle 2 (file)


État 8

   61 body: tree . body
   62     | tree .

    TAG  décalage et aller à l'état 1
    '{'  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 62 (body)

    body  aller à l'état 40
    tree  aller à l'état 8


État 9

   66 tree: TAG '/' .

    $défaut  réduction par utilisation de la règle 66 (tree)


État 10

   65 tree: TAG '{' . contenus '}'

    TAG      décalage et aller à l'état 1
    NAME     décalage et aller à l'état 15
    INTEGER  décalage et aller à l'état 16
    LET      décalage et aller à l'état 17
    IF       décalage et aller à l'état 18
    MATCH    décalage et aller à l'état 19
    EMIT     décalage et aller à l'état 20
    '"'      décalage et aller à l'état 21
    '!'      décalage et aller à l'état 22
    '('      décalage et aller à l'état 23
    '{'      décalage et aller à l'état 3

    declaration_locale   aller à l'état 24
    expr                 aller à l'état 25
    conditional_expr     aller à l'état 26
    logical_expr         aller à l'état 27
    relational_expr      aller à l'état 28
    additive_expr        aller à l'état 29
    multiplicative_expr  aller à l'état 30
    negative_expr        aller à l'état 31
    factor_expr          aller à l'état 32
    match_expr           aller à l'état 33
    tree                 aller à l'état 34
    contenus             aller à l'état 41
    contenu              aller à l'état 36


État 11

   63 tree: TAG '[' . attributs ']' '{' contenus '}'
   64     | TAG '[' . attributs ']' '/'

    TAG  décalage et aller à l'état 42

    attributs  aller à l'état 43


État 12

    7 names: NAME . names
    8      | NAME .

    NAME  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 8 (names)

    names  aller à l'état 44


État 13

    6 declaration: LET REC . names '=' functions

    NAME  décalage et aller à l'état 12

    names  aller à l'état 45


État 14

    5 declaration: LET names . '=' functions

    '='  décalage et aller à l'état 46


État 15

   19 expr: NAME .

    $défaut  réduction par utilisation de la règle 19 (expr)


État 16

   43 factor_expr: INTEGER .

    $défaut  réduction par utilisation de la règle 43 (factor_expr)


État 17

   11 declaration_locale: LET . NAME '=' factor_expr IN expr
   12                   | LET . REC NAME '=' factor_expr IN expr

    NAME  décalage et aller à l'état 47
    REC   décalage et aller à l'état 48


État 18

   20 conditional_expr: IF . logical_expr THEN expr ELSE expr

    TAG      décalage et aller à l'état 1
    INTEGER  décalage et aller à l'état 16
    '"'      décalage et aller à l'état 21
    '!'      décalage et aller à l'état 22
    '('      décalage et aller à l'état 23
    '{'      décalage et aller à l'état 3

    logical_expr         aller à l'état 49
    relational_expr      aller à l'état 28
    additive_expr        aller à l'état 29
    multiplicative_expr  aller à l'état 30
    negative_expr        aller à l'état 31
    factor_expr          aller à l'état 50
    tree                 aller à l'état 34


État 19

   44 match_expr: MATCH . expr WITH filter_expr END

    TAG      décalage et aller à l'état 1
    NAME     décalage et aller à l'état 15
    INTEGER  décalage et aller à l'état 16
    LET      décalage et aller à l'état 17
    IF       décalage et aller à l'état 18
    MATCH    décalage et aller à l'état 19
    EMIT     décalage et aller à l'état 20
    '"'      décalage et aller à l'état 21
    '!'      décalage et aller à l'état 22
    '('      décalage et aller à l'état 23
    '{'      décalage et aller à l'état 3

    declaration_locale   aller à l'état 24
    expr                 aller à l'état 51
    conditional_expr     aller à l'état 26
    logical_expr         aller à l'état 27
    relational_expr      aller à l'état 28
    additive_expr        aller à l'état 29
    multiplicative_expr  aller à l'état 30
    negative_expr        aller à l'état 31
    factor_expr          aller à l'état 32
    match_expr           aller à l'état 33
    tree                 aller à l'état 34


État 20

   18 expr: EMIT . '"' MOT '"' tree

    '"'  décalage et aller à l'état 52


État 21

   41 factor_expr: '"' . text '"'

    MOT  décalage et aller à l'état 53

    text    aller à l'état 54
    word_t  aller à l'état 55


État 22

   39 negative_expr: '!' . factor_expr

    TAG      décalage et aller à l'état 1
    INTEGER  décalage et aller à l'état 16
    '"'      décalage et aller à l'état 21
    '('      décalage et aller à l'état 23
    '{'      décalage et aller à l'état 3

    factor_expr  aller à l'état 56
    tree         aller à l'état 34


État 23

   40 factor_expr: '(' . expr ')'

    TAG      décalage et aller à l'état 1
    NAME     décalage et aller à l'état 15
    INTEGER  décalage et aller à l'état 16
    LET      décalage et aller à l'état 17
    IF       décalage et aller à l'état 18
    MATCH    décalage et aller à l'état 19
    EMIT     décalage et aller à l'état 20
    '"'      décalage et aller à l'état 21
    '!'      décalage et aller à l'état 22
    '('      décalage et aller à l'état 23
    '{'      décalage et aller à l'état 3

    declaration_locale   aller à l'état 24
    expr                 aller à l'état 57
    conditional_expr     aller à l'état 26
    logical_expr         aller à l'état 27
    relational_expr      aller à l'état 28
    additive_expr        aller à l'état 29
    multiplicative_expr  aller à l'état 30
    negative_expr        aller à l'état 31
    factor_expr          aller à l'état 32
    match_expr           aller à l'état 33
    tree                 aller à l'état 34


État 24

   16 expr: declaration_locale .

    $défaut  réduction par utilisation de la règle 16 (expr)


État 25

   72 contenus: expr .
   73 contenu: expr . ','

    ','  décalage et aller à l'état 58

    $défaut  réduction par utilisation de la règle 72 (contenus)


État 26

   15 expr: conditional_expr .

    $défaut  réduction par utilisation de la règle 15 (expr)


État 27

   21 conditional_expr: logical_expr .
   22 logical_expr: logical_expr . "||" relational_expr
   23             | logical_expr . "&&" relational_expr

    "||"  décalage et aller à l'état 59
    "&&"  décalage et aller à l'état 60

    $défaut  réduction par utilisation de la règle 21 (conditional_expr)


État 28

   24 logical_expr: relational_expr .
   25 relational_expr: relational_expr . "<" additive_expr
   26                | relational_expr . ">" additive_expr
   27                | relational_expr . ">=" additive_expr
   28                | relational_expr . "<=" additive_expr
   29                | relational_expr . "==" additive_expr
   30                | relational_expr . "!=" additive_expr

    "<"   décalage et aller à l'état 61
    ">"   décalage et aller à l'état 62
    "<="  décalage et aller à l'état 63
    ">="  décalage et aller à l'état 64
    "=="  décalage et aller à l'état 65
    "!="  décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 24 (logical_expr)


État 29

   31 relational_expr: additive_expr .
   32 additive_expr: additive_expr . '+' multiplicative_expr
   33              | additive_expr . '-' multiplicative_expr

    '+'  décalage et aller à l'état 67
    '-'  décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 31 (relational_expr)


État 30

   34 additive_expr: multiplicative_expr .
   35 multiplicative_expr: multiplicative_expr . '*' negative_expr
   36                    | multiplicative_expr . '/' negative_expr

    '*'  décalage et aller à l'état 69
    '/'  décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 34 (additive_expr)


État 31

   37 multiplicative_expr: negative_expr .

    $défaut  réduction par utilisation de la règle 37 (multiplicative_expr)


État 32

   13 declaration_locale: factor_expr . WHERE NAME '=' expr
   14                   | factor_expr . WHERE REC NAME '=' expr
   38 negative_expr: factor_expr .

    WHERE  décalage et aller à l'état 71

    $défaut  réduction par utilisation de la règle 38 (negative_expr)


État 33

   17 expr: match_expr .

    $défaut  réduction par utilisation de la règle 17 (expr)


État 34

   42 factor_expr: tree .

    $défaut  réduction par utilisation de la règle 42 (factor_expr)


État 35

   67 tree: '{' contenus . '}'

    '}'  décalage et aller à l'état 72


État 36

   70 contenus: contenu . contenus
   71         | contenu .

    TAG      décalage et aller à l'état 1
    NAME     décalage et aller à l'état 15
    INTEGER  décalage et aller à l'état 16
    LET      décalage et aller à l'état 17
    IF       décalage et aller à l'état 18
    MATCH    décalage et aller à l'état 19
    EMIT     décalage et aller à l'état 20
    '"'      décalage et aller à l'état 21
    '!'      décalage et aller à l'état 22
    '('      décalage et aller à l'état 23
    '{'      décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 71 (contenus)

    declaration_locale   aller à l'état 24
    expr                 aller à l'état 25
    conditional_expr     aller à l'état 26
    logical_expr         aller à l'état 27
    relational_expr      aller à l'état 28
    additive_expr        aller à l'état 29
    multiplicative_expr  aller à l'état 30
    negative_expr        aller à l'état 31
    factor_expr          aller à l'état 32
    match_expr           aller à l'état 33
    tree                 aller à l'état 34
    contenus             aller à l'état 73
    contenu              aller à l'état 36


État 37

    0 $accept: file $end .

    $défaut  accepter


État 38

    1 file: declarations_globales body .

    $défaut  réduction par utilisation de la règle 1 (file)


État 39

    3 declarations_globales: declaration ';' . declarations_globales
    4                      | declaration ';' .

    LET  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 4 (declarations_globales)

    declarations_globales  aller à l'état 74
    declaration            aller à l'état 6


État 40

   61 body: tree body .

    $défaut  réduction par utilisation de la règle 61 (body)


État 41

   65 tree: TAG '{' contenus . '}'

    '}'  décalage et aller à l'état 75


État 42

   68 attributs: TAG . '=' '"' text '"' attributs
   69          | TAG . '=' '"' text '"'

    '='  décalage et aller à l'état 76


État 43

   63 tree: TAG '[' attributs . ']' '{' contenus '}'
   64     | TAG '[' attributs . ']' '/'

    ']'  décalage et aller à l'état 77


État 44

    7 names: NAME names .

    $défaut  réduction par utilisation de la règle 7 (names)


État 45

    6 declaration: LET REC names . '=' functions

    '='  décalage et aller à l'état 78


État 46

    5 declaration: LET names '=' . functions

    TAG      décalage et aller à l'état 1
    NAME     décalage et aller à l'état 15
    INTEGER  décalage et aller à l'état 16
    LET      décalage et aller à l'état 17
    FUN      décalage et aller à l'état 79
    IF       décalage et aller à l'état 18
    MATCH    décalage et aller à l'état 19
    EMIT     décalage et aller à l'état 20
    '"'      décalage et aller à l'état 21
    '!'      décalage et aller à l'état 22
    '('      décalage et aller à l'état 23
    '{'      décalage et aller à l'état 3

    functions            aller à l'état 80
    declaration_locale   aller à l'état 24
    expr                 aller à l'état 81
    conditional_expr     aller à l'état 26
    logical_expr         aller à l'état 27
    relational_expr      aller à l'état 28
    additive_expr        aller à l'état 29
    multiplicative_expr  aller à l'état 30
    negative_expr        aller à l'état 31
    factor_expr          aller à l'état 32
    match_expr           aller à l'état 33
    tree                 aller à l'état 34


État 47

   11 declaration_locale: LET NAME . '=' factor_expr IN expr

    '='  décalage et aller à l'état 82


État 48

   12 declaration_locale: LET REC . NAME '=' factor_expr IN expr

    NAME  décalage et aller à l'état 83


État 49

   20 conditional_expr: IF logical_expr . THEN expr ELSE expr
   22 logical_expr: logical_expr . "||" relational_expr
   23             | logical_expr . "&&" relational_expr

    THEN  décalage et aller à l'état 84
    "||"  décalage et aller à l'état 59
    "&&"  décalage et aller à l'état 60


État 50

   38 negative_expr: factor_expr .

    $défaut  réduction par utilisation de la règle 38 (negative_expr)


État 51

   44 match_expr: MATCH expr . WITH filter_expr END

    WITH  décalage et aller à l'état 85


État 52

   18 expr: EMIT '"' . MOT '"' tree

    MOT  décalage et aller à l'état 86


État 53

   76 word_t: MOT . ' '
   77       | MOT .

    ' '  décalage et aller à l'état 87

    $défaut  réduction par utilisation de la règle 77 (word_t)


État 54

   41 factor_expr: '"' text . '"'

    '"'  décalage et aller à l'état 88


État 55

   74 text: word_t . text
   75     | word_t .

    MOT  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 75 (text)

    text    aller à l'état 89
    word_t  aller à l'état 55


État 56

   39 negative_expr: '!' factor_expr .

    $défaut  réduction par utilisation de la règle 39 (negative_expr)


État 57

   40 factor_expr: '(' expr . ')'

    ')'  décalage et aller à l'état 90


État 58

   73 contenu: expr ',' .

    $défaut  réduction par utilisation de la règle 73 (contenu)


État 59

   22 logical_expr: logical_expr "||" . relational_expr

    TAG      décalage et aller à l'état 1
    INTEGER  décalage et aller à l'état 16
    '"'      décalage et aller à l'état 21
    '!'      décalage et aller à l'état 22
    '('      décalage et aller à l'état 23
    '{'      décalage et aller à l'état 3

    relational_expr      aller à l'état 91
    additive_expr        aller à l'état 29
    multiplicative_expr  aller à l'état 30
    negative_expr        aller à l'état 31
    factor_expr          aller à l'état 50
    tree                 aller à l'état 34


État 60

   23 logical_expr: logical_expr "&&" . relational_expr

    TAG      décalage et aller à l'état 1
    INTEGER  décalage et aller à l'état 16
    '"'      décalage et aller à l'état 21
    '!'      décalage et aller à l'état 22
    '('      décalage et aller à l'état 23
    '{'      décalage et aller à l'état 3

    relational_expr      aller à l'état 92
    additive_expr        aller à l'état 29
    multiplicative_expr  aller à l'état 30
    negative_expr        aller à l'état 31
    factor_expr          aller à l'état 50
    tree                 aller à l'état 34


État 61

   25 relational_expr: relational_expr "<" . additive_expr

    TAG      décalage et aller à l'état 1
    INTEGER  décalage et aller à l'état 16
    '"'      décalage et aller à l'état 21
    '!'      décalage et aller à l'état 22
    '('      décalage et aller à l'état 23
    '{'      décalage et aller à l'état 3

    additive_expr        aller à l'état 93
    multiplicative_expr  aller à l'état 30
    negative_expr        aller à l'état 31
    factor_expr          aller à l'état 50
    tree                 aller à l'état 34


État 62

   26 relational_expr: relational_expr ">" . additive_expr

    TAG      décalage et aller à l'état 1
    INTEGER  décalage et aller à l'état 16
    '"'      décalage et aller à l'état 21
    '!'      décalage et aller à l'état 22
    '('      décalage et aller à l'état 23
    '{'      décalage et aller à l'état 3
